<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_newList"
            android:icon="@drawable/new_list"
            android:title="@string/btnNewList" />
        <item
            android:id="@+id/nav_savedLists"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/btnOpenLists" />
        <item
            android:id="@+id/nav_newShop"
            android:title="@string/btnNewShop"
            android:icon="@drawable/shop_basket" />
        <item
            android:id="@+id/nav_openShop"
            android:icon="@drawable/previous_shop"
            android:title="@string/btnPreviousShop" />
    </group>

    <item android:title="@string/menuHelp"
        android:id="@+id/nav_sep1">
        <menu>
            <item
                android:id="@+id/nav_stepbystep"
                android:icon="@drawable/tutorial"
                android:title="@string/menuTutorial" />
        </menu>
    </item>

</menu>
