<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartdays.smartlist.VerComprasFragment">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ltwCompras"
        android:layout_below="@+id/txtLabelComprasEfet"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp" />

    <TextView
        android:text="@string/txvDescDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/txvDescDate"
        android:textSize="18sp"
        android:layout_below="@+id/txtLabelComprasEfet"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:text="@string/txvDescVlr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:id="@+id/txvTotalVlrCompra"
        android:layout_alignBaseline="@+id/txvListaBase"
        android:layout_alignBottom="@+id/txvListaBase"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:text="@string/txvDescListaBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvListaBase"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_alignBaseline="@+id/txvDescDate"
        android:layout_alignBottom="@+id/txvDescDate"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/txtComprasEfetuadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtLabelComprasEfet"
        android:textSize="18sp"
        android:layout_marginTop="57dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
