<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartdays.smartlist.NovaListaFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/txtListName"
        android:ems="10"
        android:layout_marginTop="29dp"
        android:id="@+id/txtListName"
        android:layout_below="@+id/txtNewList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/txvNewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNewList"
        android:textSize="18sp"
        android:typeface="sans"
        android:textStyle="normal|bold"
        android:layout_marginTop="81dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnAddList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveList"
        android:layout_below="@+id/txtListName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

</RelativeLayout>
